--- a/src/layouts/public.css
+++ b/src/layouts/public.css
@@ -1,19 +1,28 @@
 .public-layout {
    width: 100%;
    min-height: 100vh;
-   background-color: var(--gray-100);
+   background-color: var(--secondary);
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
 
    .navbar {
       width: 100%;
       height: var(--px-64);
+      min-height: 48px;
       background-color: var(--primary);
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 0 var(--px-24);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
 
       .left-section {
-         width: 20%;
+         width: 25%;
          height: 100%;
          display: flex;
          align-items: center;
@@ -27,7 +36,7 @@
             background-color: var(--white);
          }
          input[type="search"]:focus {
-            border: 1px solid var(--secondary);
+            border: 2px solid var(--secondary);
             box-shadow: 0px 0px 8px var(--secondary);
          }
       }
@@ -56,67 +65,17 @@
          }
       }
    }
-}
 
-.public-layout .home {
-   width: 100%;
-   height: fit-content;
-   display: flex;
-   justify-content: center;
-   align-items: flex-start;
-   flex-direction: column;
-   padding: var(--px-32) var(--px-64);
-   gap: var(--px-16);
-
-   .left-content {
-      flex: 1;
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      gap: var(--px-16);
-      /* background-color: var(--secondary); */
-      border-radius: var(--px-12);
-      padding: var(--px-12);
-      color: var(--primary);
-
-      .welcome {
-         padding: var(--px-8) 0;
-         overflow: hidden;
-         display: flex;
-         flex-direction: column;
-
-         h1 {
-            font-size: var(--fs-8);
-            font-weight: 700;
-            line-height: 1;
-         }
-         h2 {
-            font-size: var(--fs-5);
-            font-weight: 600;
-            line-height: 1;
-         }
-      }
-
-      .date {
-         width: 100%;
-         background-color: var(--thirdnary);
-         padding: var(--px-12);
-         text-align: center;
-         border-radius: var(--px-16);
-         font-size: var(--fs-6);
-         font-weight: 600;
-         color: var(--gray-100);
-      }
-   }
-
-   .right-content {
-      flex: 1;
+   .footer {
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: var(--px-24);
-      background-color: var(--thirdnary);
-      border-radius: var(--px-12);
-      padding: var(--px-16) var(--px-64);
+      padding: var(--px-12);
+      background-color: var(--primary);
+
+      h1 {
+         text-align: center;
+         font-size: var(--fs-3);
+         font-weight: 600;
+         color: var(--gray-900);
+      }
    }
 }
