Rombak design ke Mobile only

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
    --primary: #377442;
    --secondary: #afe1c6;
-   --thirdnary: #719c85;
+   --thirdnary: #d4f7e4;
 
    --white: #fff;
    --black: #000;
