--- a/src/layouts/public.css
+++ b/src/layouts/public.css
@@ -1,115 +1,121 @@
-.public-layout {
-   width: 100%;
-   min-height: 100vh;
-   background-color: var(--secondary);
-   position: relative;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: space-between;
+@media screen and (max-width: 1279px) {
+   .desktop-handle {
+      display: none;
+   }
 
-   > .navbar {
+   .public-layout {
       width: 100%;
-      height: var(--px-64);
-      min-height: 48px;
-      background-color: var(--primary);
+      min-height: 100svh;
+      position: relative;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
-      padding: 0 var(--px-24);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      justify-content: space-between;
 
-      .left-section {
-         width: 30%;
-         height: 100%;
+      > .navbar {
+         width: 100%;
+         height: calc(var(--spx-128) - var(--spx-48));
+         min-height: 48px;
+         background-color: var(--primary);
          display: flex;
+         justify-content: space-around;
          align-items: center;
-         gap: var(--px-24);
-
-         img {
-            width: auto;
-            height: 100%;
-            filter: brightness(1000);
-         }
-
-         input[type="search"] {
-            font-size: var(--fs-3);
-            padding: var(--px-8) var(--px-8);
-            width: 100%;
-            border-radius: var(--px-8);
-            transition: 0.3s ease;
-            background-color: var(--white);
-         }
-         input[type="search"]:focus {
-            border: 2px solid var(--secondary);
-            box-shadow: 0px 0px 8px var(--secondary);
-         }
-      }
-
-      .right-section {
-         width: fit-content;
-         height: 100%;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
+         padding: 0 var(--px-24);
+         position: fixed;
+         bottom: 0;
+         z-index: 1000;
 
          a {
+            aspect-ratio: 1/1;
             height: fit-content;
             display: flex;
+            justify-content: center;
             align-items: center;
-            gap: var(--px-8);
-            font-size: var(--fs-4);
+            font-size: var(--fs-8);
             font-weight: 600;
             color: var(--gray-100);
-            padding: var(--px-8) var(--px-24);
-            border-radius: var(--px-8);
+            padding: var(--spx-8);
+            border-radius: var(--spx-8);
             transition: 0.3s ease;
          }
-         a:hover {
+         a:active {
             background-color: var(--secondary);
          }
       }
-   }
 
-   > .footer {
-      width: 100%;
-      padding: var(--px-12);
-      background-color: var(--primary);
-
-      h1 {
-         text-align: center;
-         font-size: var(--fs-3);
-         font-weight: 600;
-         color: var(--gray-900);
-      }
-   }
-
-   .btn-back {
-      width: fit-content;
-      height: 100%;
-      max-height: 100vh;
-      top: 0;
-      left: 0;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      position: fixed;
-
-      .btn {
-         font-size: var(--fs-7);
-         color: var(--gray-100);
+      > .footer {
+         width: 100%;
+         padding: var(--px-12);
          background-color: var(--primary);
-         padding: var(--px-8);
-         padding-left: 0;
-         border-top-right-radius: 100rem;
-         border-bottom-right-radius: 100rem;
-         cursor: pointer;
-         transition: 0.3s ease;
+
+         h1 {
+            text-align: center;
+            font-size: var(--fs-3);
+            font-weight: 600;
+            color: var(--gray-900);
+         }
       }
-      .btn:hover {
-         background-color: var(--thirdnary);
+
+      .btn-back {
+         width: fit-content;
+         height: 100%;
+         max-height: 100svh;
+         top: 0;
+         left: 0;
+         display: flex;
+         justify-content: flex-start;
+         align-items: center;
+         position: fixed;
+
+         .btn {
+            font-size: var(--fs-7);
+            color: var(--gray-100);
+            background-color: var(--primary);
+            padding: var(--spx-8);
+            padding-left: 0;
+            border-top-right-radius: 100rem;
+            border-bottom-right-radius: 100rem;
+            cursor: pointer;
+            transition: 0.3s ease;
+         }
+         .btn:active {
+            background-color: var(--thirdnary);
+         }
+      }
+   }
+}
+
+@media screen and (min-width: 1280px) {
+   .public-layout {
+      display: none;
+   }
+
+   .desktop-handle {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: var(--secondary);
+
+      .container {
+         width: 50%;
+         height: var(--px-256);
+         border-radius: var(--px-24);
+         padding: var(--px-64);
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         background-color: var(--primary);
+         border-top: var(--px-8) solid var(--gray-100);
+         box-shadow: 1px 1px 4px var(--primary);
+
+         h1 {
+            text-align: center;
+            font-size: var(--fs-10);
+            font-weight: 700;
+            color: var(--white);
+         }
       }
    }
 }
