--- a/src/pages/public/index.css
+++ b/src/pages/public/index.css
@@ -1,173 +1,288 @@
 .public-layout .home {
    width: 100%;
+   min-height: 50svh;
    height: fit-content;
    display: flex;
-   justify-content: center;
-   align-items: center;
    flex-direction: column;
-   padding: var(--px-32) var(--px-64);
-   gap: var(--px-40);
+   justify-content: flex-start;
+   align-items: center;
+   padding-top: var(--spx-32);
+   padding-bottom: var(--spx-128);
+   background: linear-gradient(
+      to bottom,
+      var(--thirdnary) 40svh,
+      var(--white) 0%
+   );
 
-   .top-content {
-      flex: 1;
-      width: 40%;
+   > .header {
+      width: 100%;
       display: flex;
       flex-direction: column;
-      gap: var(--px-16);
-      border-radius: var(--px-12);
-      color: var(--primary);
+      justify-content: center;
+      align-items: center;
+      gap: var(--spx-8);
+      padding: 0 var(--spx-48);
+      padding-bottom: var(--spx-12);
+      background-color: var(--thirdnary);
+      border-bottom-right-radius: var(--spx-32);
+      border-bottom-left-radius: var(--spx-32);
 
-      .welcome {
-         padding: var(--px-8) 0;
-         overflow: hidden;
+      .logo {
+         width: 100%;
          display: flex;
-         flex-direction: column;
-         border-bottom: 2px solid var(--thirdnary);
-         text-align: center;
+         justify-content: flex-start;
+         align-items: flex-start;
+
+         img {
+            aspect-ratio: 1/1;
+            height: 100%;
+            width: var(--spx-48);
+            transform: translateX(calc(var(--spx-8) - var(--spx-16)));
+         }
+      }
+
+      .greeting {
+         width: 100%;
+         color: var(--gray-600);
 
          h1 {
-            font-size: var(--fs-8);
-            font-weight: 700;
-            line-height: 1.5;
-            color: var(--gray-800);
+            font-size: var(--fs-4);
+            font-weight: 800;
+            line-height: 1.25;
          }
+
          h2 {
-            font-size: var(--fs-5);
-            font-weight: 600;
-            line-height: 1.5;
-            color: var(--gray-600);
+            font-size: var(--fs-3);
+            font-weight: 400;
+            line-height: 1.25;
          }
       }
 
       .date {
          width: 100%;
-         background-color: var(--gray-100);
-         padding: var(--px-12);
          text-align: center;
-         border-radius: var(--px-16);
-         font-size: var(--fs-6);
+         padding: var(--spx-12) var(--spx-8);
+         background-color: var(--secondary);
+         border-radius: var(--spx-8);
+         font-size: var(--fs-4);
          font-weight: 600;
-         color: var(--gray-800);
-         transition: 0.5s ease-in-out;
-         overflow: hidden;
-         position: relative;
-
-         a {
-            opacity: 0;
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: 0.3s ease-in-out;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 100;
-            color: var(--gray-100);
-         }
-      }
-      .date:hover a {
-         opacity: 1;
-         background-color: var(--primary);
-      }
-   }
-
-   .bottom-content {
-      flex: 1;
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-      gap: var(--px-24);
-      background-color: var(--gray-100);
-      border-radius: var(--px-12);
-      padding: var(--px-32);
-
-      .header h1 {
-         width: fit-content;
-         padding-right: var(--px-24);
-         color: var(--gray-800);
-         font-size: var(--fs-8);
-         font-weight: 700;
-         border-bottom: 2px solid var(--primary);
+         color: var(--gray-600);
       }
 
-      .main {
+      .room-navigation {
          width: 100%;
-         min-height: 10vh;
          display: flex;
+         flex-direction: column;
          justify-content: center;
          align-items: flex-start;
-         flex-direction: column;
-         gap: var(--px-32);
+         gap: var(--spx-8);
 
-         .container {
-            flex: 1;
+         input[type="search"] {
             width: 100%;
-            height: fit-content;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: var(--px-16);
-
-            .card {
-               flex: 1;
-               height: fit-content;
-               background-color: var(--secondary);
-               min-width: var(--px-256);
-               display: flex;
-               justify-content: flex-start;
-               align-items: center;
-               flex-direction: column;
-               padding: var(--px-16);
-               transition: 0.3s ease;
-               border-radius: var(--px-12);
-               gap: var(--px-8);
-
-               .icon {
-                  aspect-ratio: 1/1;
-                  width: 50%;
-                  height: fit-content;
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  font-size: var(--px-256);
-                  color: var(--primary);
-               }
-
-               h1 {
-                  font-size: var(--fs-5);
-                  font-weight: 400;
-                  white-space: nowrap;
-                  color: var(--primary);
-               }
-            }
-            .card:hover {
-               transform: scale(1.025);
-               box-shadow: 0 0 5px var(--secondary);
-               cursor: pointer;
-            }
+            font-size: var(--fs-4);
+            padding: var(--spx-8);
+            border-radius: var(--spx-8);
+            background-color: var(--secondary);
+            border: 1px solid transparent;
+            transition: 0.3s ease;
+         }
+         input[type="search"]:focus {
+            border-color: var(--primary);
          }
 
          .btn {
             width: 100%;
-            background-color: var(--primary);
-            text-align: center;
-            padding: var(--px-8);
             font-size: var(--fs-5);
-            font-weight: 600;
+            font-weight: 500;
+            padding: var(--spx-8);
+            text-align: center;
+            background-color: var(--primary);
+            border-radius: var(--spx-8);
             color: var(--gray-100);
-            border-radius: var(--px-8);
-            transition: 0.3s ease;
          }
-         .btn:hover {
-            background-color: var(--thirdnary);
+      }
+
+      .item-navigation {
+         width: fit-content;
+         text-align: center;
+         font-size: var(--fs-2);
+         font-weight: 400;
+         color: var(--gray-600);
+         text-decoration: underline;
+         transition: 0.3s ease;
+      }
+      .item-navigation:active {
+         color: var(--gray-900);
+      }
+   }
+
+   .main {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+      padding: var(--spx-16) var(--spx-48);
+      gap: var(--spx-16);
+
+      > .header {
+         width: 100%;
+         height: fit-content;
+
+         h1 {
+            font-size: var(--fs-5);
+            font-weight: 700;
+            color: var(--gray-700);
+         }
+      }
+
+      .container {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: space-between;
+         gap: var(--spx-16);
+
+         .card {
+            min-width: 40%;
+            background-color: var(--secondary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: var(--spx-8);
+            padding: var(--spx-8);
+            border-radius: var(--spx-12);
+            flex: 1;
+            color: var(--primary);
+            transition: 0.3s ease;
+
+            .icon {
+               font-size: calc(var(--fs-10) * 2);
+            }
+
+            h1 {
+               text-align: center;
+               font-size: var(--fs-3);
+               font-weight: 500;
+               color: var(--gray-600);
+            }
+         }
+         .card:active {
+            transform: scale(1.05);
+         }
+      }
+   }
+}
+
+/* ===== Activity style start ===== */
+.public-layout .submited-request,
+.public-layout .approval-status,
+.public-layout .booked-room,
+.public-layout .booked-item {
+   width: 100%;
+   min-height: 50svh;
+   height: fit-content;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
+   padding-top: var(--spx-32);
+   padding-bottom: var(--spx-128);
+
+   > .header {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: var(--spx-8);
+      padding: 0 var(--spx-48);
+      padding-bottom: var(--spx-12);
+
+      .logo {
+         width: 100%;
+         display: flex;
+         justify-content: flex-start;
+         align-items: flex-start;
+
+         img {
+            aspect-ratio: 1/1;
+            height: 100%;
+            width: var(--spx-48);
+            transform: translateX(calc(var(--spx-8) - var(--spx-16)));
+         }
+      }
+
+      .activity {
+         width: 100%;
+         color: var(--gray-600);
+
+         h1 {
+            font-size: var(--fs-4);
+            font-weight: 800;
+            line-height: 1.25;
+         }
+
+         h2 {
+            font-size: var(--fs-3);
+            font-weight: 400;
+            line-height: 1.25;
+         }
+      }
+   }
+}
+
+.public-layout .submited-request,
+.public-layout .approval-status,
+.public-layout .booked-room {
+   .main {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      gap: var(--spx-8);
+      padding: 0 var(--spx-48);
+
+      .list {
+         width: 100%;
+         height: fit-content;
+         background-color: var(--secondary);
+         border-radius: var(--spx-12);
+         padding: var(--spx-8) var(--spx-16);
+         color: var(--gray-600);
+
+         img {
+            overflow: hidden;
+            aspect-ratio: 16/9;
+            object-fit: cover;
+            border-radius: var(--spx-8);
+            top: 0;
+            margin: var(--spx-8) 0;
+         }
+
+         h1 {
+            font-size: var(--fs-3);
+            font-weight: 600;
+         }
+
+         h2 {
+            font-size: var(--fs-2);
+            font-weight: 800;
+         }
+
+         span {
             color: var(--gray-900);
          }
       }
    }
 }
+.public-layout .booked-room .main .list h1 {
+   text-align: center;
+   color: var(--gray-100);
+   text-shadow: 1px 1px 2px var(--gray-500);
+}
+/* ===== Activity style end ===== */
 
 .public-layout .booking {
    width: 100%;
