--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,94 @@
    --btn-neutral: #868e96;
 }
 
+/* ===== Custom confirm & loading modal style start ===== */
+.confirm-overlay {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.4);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 1000;
+
+   .confirm-box {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: var(--white);
+      border-radius: var(--spx-8);
+      max-width: 80%;
+      padding: var(--spx-24);
+      gap: var(--spx-12);
+
+      box-shadow: 0 2px 1px var(--gray-100);
+      text-align: center;
+      font-size: var(--fs-2);
+
+      .logo {
+         width: 100%;
+         display: flex;
+         justify-content: center;
+         font-size: var(--spx-64);
+      }
+      .logo.success {
+         color: var(--btn-save);
+      }
+      .logo.failed {
+         color: var(--btn-danger);
+      }
+
+      p {
+         width: fit-content;
+         font-size: var(--fs-4);
+      }
+
+      .confirm-buttons {
+         display: flex;
+         justify-content: center;
+
+         button {
+            padding: var(--spx-8) var(--spx-16);
+            cursor: pointer;
+            border: none;
+            border-radius: 4px;
+            color: var(--white);
+            transition: 0.2s ease;
+            font-size: var(--fs-3);
+            background-color: var(--btn-info);
+         }
+         button:active {
+            background-color: var(--gray-200);
+         }
+      }
+
+      .loading {
+         aspect-ratio: 1/1;
+         width: var(--spx-64);
+         height: var(--spx-64);
+         border: var(--px-32) solid var(--gray-100);
+         border-top: var(--px-32) solid var(--secondary);
+         border-radius: 50%;
+         animation: spin 1s linear infinite;
+         margin: auto;
+      }
+   }
+}
+
+@keyframes spin {
+   0% {
+      transform: rotate(0deg);
+   }
+   100% {
+      transform: rotate(360deg);
+   }
+}
+/* ===== Custom confirm & loading modal style end ===== */
+
 html,
 body {
    width: 100%;
