Progres admin page (dashboard)

--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,15 @@
    }
 }
 
+@media screen and (min-width: 769px) {
+   .confirm-overlay .confirm-box .loading {
+      width: var(--px-64);
+      height: var(--px-64);
+      border: var(--px-8) solid var(--gray-100);
+      border-top: var(--px-8) solid var(--secondary);
+   }
+}
+
 @keyframes spin {
    0% {
       transform: rotate(0deg);
