--- a/src/pages/auth/index.css
+++ b/src/pages/auth/index.css
@@ -88,3 +88,46 @@
       }
    }
 }
+
+@media screen and (min-width: 769px), (orientation: landscape) {
+   .auth {
+      width: 100%;
+      min-height: 100vh;
+      height: fit-content;
+      gap: var(--px-32);
+
+      .logo {
+         width: 20%;
+      }
+
+      form {
+         display: flex;
+         align-items: center;
+         flex-direction: column;
+      }
+
+      .container {
+         width: 50%;
+         gap: var(--px-8);
+
+         .input {
+            padding: var(--px-8) var(--px-16);
+            border-radius: var(--px-8);
+         }
+      }
+
+      .action {
+         margin-top: var(--px-32);
+
+         .btn {
+            padding: var(--px-8) var(--px-40);
+            border-radius: var(--px-12);
+            cursor: pointer;
+         }
+      }
+
+      .footer .btn {
+         margin-top: var(--px-12);
+      }
+   }
+}
